# aosoa

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  aosoa.h  build.sh  sbatch_single_job.sh  todo.md
include/aosoa/: accessor.h  aligned_pointers.h  aosoa.h  c_memory_operations.h  compile_time_string.h  cuda_memory_operations.h  definitions.h  memory_operations.h  row.h  structure_of_arrays.h  sycl_memory_operations.h  type_operations.h  variable.h
samples/: CMakeLists.txt  common.h
samples/cpu_samples/: CMakeLists.txt  pixels_sample.cpp
samples/cuda_samples/: .clangd  CMakeLists.txt  cuda_sample.cu  pixels_sample.cu
samples/hip_samples/: .clangd  CMakeLists.txt  pixels_sample.cpp
samples/sycl_samples/: CMakeLists.txt  pixels_sample.cpp
scripts/: build.sh
src/: CMakeLists.txt  accessor.h  aligned_pointers.h  aosoa.h  cuda_memory_operations.h  definitions.h  example.h  hip_memory_operations.h  main.cpp  memory_operations.h  row.h  struct_iterator.h  sycl_memory_operations.h  type_operations.h  variable.h
tests/: CMakeLists.txt  aligned_pointers_tests.cpp  aosoa_tests.cpp  balls.h  example.h  main.cpp  row_tests.cpp  run.sh  run_tests.sh  tests.cpp
